--- a/src/main/java/com/eleks/framework/config/GlobalConfig.properties
+++ b/src/main/java/com/eleks/framework/config/GlobalConfig.properties
@@ -2,5 +2,5 @@ autConnectionString=jdbc:sqlserver://localhost:1433;databaseName=EmployeeDB;user
 logPath=C:/Users/nazarii.bakusko/IdeaProjects/MiddleMatrixFramework/logs
 excelSheetPath=C:/Users/nazarii.bakusko/IdeaProjects/MiddleMatrixFramework/testdata.xls
 driverType=com.microsoft.sqlserver.jdbc.SQLServerDriver
-aut=http://localhost:64429/
+aut=http://eaapp.somee.com/
 browserType=Firefox
