Thread save and update code

--- a/src/main/java/com/eleks/framework/config/GlobalConfig.properties
+++ b/src/main/java/com/eleks/framework/config/GlobalConfig.properties
@@ -4,3 +4,4 @@ excelSheetPath=C:/Users/nazarii.bakusko/IdeaProjects/MiddleMatrixFramework/testd
 driverType=com.microsoft.sqlserver.jdbc.SQLServerDriver
 aut=http://eaapp.somee.com/
 browserType=Firefox
+SeleniumGrid=http://192.168.0.139:4444/wd/hub
